@@ -8695,6 +8695,14 @@ part parent "m328"
     ocdrev              = 1;
 ;
 
+part parent "m328"
+    id			= "m328pb";
+    desc		= "ATmega328PB";
+    signature		= 0x1e 0x95 0x16;
+
+    ocdrev              = 1;
+;
+
 #------------------------------------------------------------
 # ATmega32m1
 #------------------------------------------------------------
