@@ -15,6 +15,8 @@ Current:
 
   * New devices supported:
 
+    - ATmega328PB
+
   * New programmers supported:
 
     - ehajo-isp (commercial version of USBtiny)
